# ecommerce_full_stack

./: .$ecommerce.drawio.bkp  .$ecommerce.drawio.dtmp  .gitignore  README.md  ecommerc_dotnet.sln  ecommerce.drawio  trigger.sql
api/: API_DOCUMENTATION.md  Program.cs  README.md  api.csproj  appsettings.json  trigger.sql
api/Infrastructure/: IConfig.cs  IUnitOfWork.cs
api/application/: AppDbContext.cs  AuthenticationServices.cs  EmailServices.cs  NotificationServices.cs
api/util/: clsValidation.cs
backend/: backend.sln
backend/api/: Program.cs  api.http  api.sln  appsettings.Development.json
dashboard/: message.json  next.config.ts  package.json  pnpm-lock.yaml
eccorce_app/: gradlew  gradlew.bat  settings.gradle.kts
eccorce_app/app/: .gitignore  build.gradle.kts
eccorce_app/gradle/: libs.versions.toml
ecommerc_dotnet/: .$ecommerce.drawio.dtmp  Program.cs  README.md  appsettings.Development.json  appsettings.json  ecommerc_dotnet.csproj  ecommerc_dotnet.http  ecommerc_dotnet.sln  ecommerce.drawio
ecommerc_dotnet/Infrastructure/: IEmail.cs  IUnitOfWork.cs
ecommerc_dotnet/Migrations/: 20250505043350_InitialCreate.Designer.cs  20250505043350_InitialCreate.cs  20250505061509_Initial.Designer.cs  20250505061509_Initial.cs  20250505081806_adding is delete to user.Designer.cs  20250505081806_adding is delete to user.cs  20250505180406_Initial.Designer.cs  20250505180406_Initial.cs  20250506072305_adding_addresss_relation.Designer.cs  (+18 more)
ecommerce-delivery-man/: local.properties
ecommerce-delivery-man/app/src/main/jni/: CMakeLists.txt  keys.cpp
(+1045 files in other folders)
